fix(Input): add text alignment to Input component styles

--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  text-align: left;
 
   &.error {
     margin-bottom: 24px;
